--- a/pom.xml
+++ b/pom.xml
@@ -12,24 +12,25 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<mainClass>com.socgen.maven.proxy.Server</mainClass>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.3</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>commons-io</groupId> -->
+		<!-- <artifactId>commons-io</artifactId> -->
+		<!-- <version>2.3</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>commons-lang</groupId> -->
+		<!-- <artifactId>commons-lang</artifactId> -->
+		<!-- <version>2.6</version> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -37,6 +38,12 @@
 			<version>1.6.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.0</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -87,11 +94,65 @@
 									<goal>java</goal>
 								</goals>
 								<configuration>
-									<mainClass>com.socgen.maven.proxy.App</mainClass>
-									<!-- <arguments> -->
-									<!-- <argument>arg0</argument> -->
-									<!-- <argument>arg1</argument> -->
-									<!-- </arguments> -->
+									<mainClass>${mainClass}</mainClass>
+									<!-- <systemProperties> -->
+									<!-- <systemProperty> -->
+									<!-- <key>-Dproxy.httpProxy</key> -->
+									<!-- <value>http://gorongspeed.info</value> -->
+									<!-- </systemProperty> -->
+									<!-- </systemProperties> -->
+									<arguments>
+										<argument>http.proxyHost=http://gorongspeed.info</argument>
+										<argument>http.proxyPort=80</argument>
+										<argument>http.proxyUser=</argument>
+										<argument>http.proxyPassword=</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>ass1</id>
+			<build>
+				<finalName>${project.artifactId}</finalName>
+				<defaultGoal>package</defaultGoal>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jar-plugin</artifactId>
+						<configuration>
+							<archive>
+								<manifest>
+									<addClasspath>true</addClasspath>
+									<mainClass>${mainClass}</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<configuration>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+						<executions>
+							<execution>
+								<id>make-my-jar-with-dependencies</id>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+								<configuration>
+									<archive>
+										<manifest>
+											<addClasspath>true</addClasspath>
+											<mainClass>${mainClass}</mainClass>
+										</manifest>
+									</archive>
 								</configuration>
 							</execution>
 						</executions>
